--- a/src/booknaviger/MainInterface.form
+++ b/src/booknaviger/MainInterface.form
@@ -15,9 +15,10 @@
     <Container class="javax.swing.JDialog" name="aboutDialog">
       <Properties>
         <Property name="defaultCloseOperation" type="int" value="2"/>
-        <Property name="alwaysOnTop" type="boolean" value="true"/>
-        <Property name="modal" type="boolean" value="true"/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JDialog(this)"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -592,6 +593,9 @@
                   <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="albumsTableMouseClicked"/>
+              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="ListSelectionModel albumsListSelectionModel = albumsTable.getSelectionModel();&#xa;albumsListSelectionModel.addListSelectionListener(new javax.swing.event.ListSelectionListener() {&#xa;            public void valueChanged(javax.swing.event.ListSelectionEvent evt) {&#xa;                albumsTableValueChanged(evt);&#xa;            }&#xa;        });"/>
                 <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="albumsTable.getColumnModel().getColumn(1).setMinWidth(0);&#xa;albumsTable.getColumnModel().getColumn(1).setMaxWidth(0);"/>
