--- a/src/booknaviger/readinterface/ReadInterface.form
+++ b/src/booknaviger/readinterface/ReadInterface.form
@@ -50,6 +50,9 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Container class="booknaviger.readinterface.ReadComponent" name="readComponent">
+          <Properties>
+            <Property name="doubleBuffered" type="boolean" value="true"/>
+          </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="readComponentMouseClicked"/>
           </Events>
