Read interface now manage fit to XXX
some optimizations on the preview

--- a/src/booknaviger/MainInterface.form
+++ b/src/booknaviger/MainInterface.form
@@ -612,6 +612,9 @@
           <Dimension value="[100, 400]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="componentResized" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="previewComponentComponentResized"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="10"/>
       </AuxValues>
