List of pages while reading. Close #13

--- a/src/booknaviger/readinterface/ReadInterface.form
+++ b/src/booknaviger/readinterface/ReadInterface.form
@@ -100,6 +100,21 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="lastPageReadInterfaceMenuItemActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="navigationReadInterfaceSeparator3">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="listPagesReadInterfaceMenuItem">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/booknaviger/resources/graphics/readmenu/listOfPages.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                  <ResourceString bundle="booknaviger/resources/ReadInterface.properties" key="listPagesReadInterfaceMenuItemText" replaceFormat="resourceBundle.getString(&quot;{key}&quot;)"/>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="listPagesReadInterfaceMenuItemActionPerformed"/>
+              </Events>
+            </MenuItem>
           </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="displayReadInterfaceMenu">
