--- a/src/booknaviger/profiles/ProfileDialog.form
+++ b/src/booknaviger/profiles/ProfileDialog.form
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.5" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+      <ResourceString bundle="booknaviger/resources/ProfileDialog.properties" key="profileDialogString" replaceFormat="resourceBundle.getString(&quot;{key}&quot;)"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -57,7 +60,9 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="newProfileButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="New profile"/>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="booknaviger/resources/ProfileDialog.properties" key="newProfileButtonString" replaceFormat="resourceBundle.getString(&quot;{key}&quot;)"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="newProfileButtonActionPerformed"/>
@@ -65,7 +70,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="deleteProfileButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Delete profile"/>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="booknaviger/resources/ProfileDialog.properties" key="deleteProfileButtonString" replaceFormat="resourceBundle.getString(&quot;{key}&quot;)"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteProfileButtonActionPerformed"/>
