--- a/src/booknaviger/MainInterface.form
+++ b/src/booknaviger/MainInterface.form
@@ -576,7 +576,7 @@
                 <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="seriesTableKeyPressed"/>
               </Events>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="ListSelectionModel seriesListSelectionModel = seriesTable.getSelectionModel();&#xa;seriesListSelectionModel.addListSelectionListener(new javax.swing.event.ListSelectionListener() {&#xa;            public void valueChanged(javax.swing.event.ListSelectionEvent evt) {&#xa;                seriesTableValueChanged(evt);&#xa;            }&#xa;        });"/>
+                <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="ListSelectionModel seriesListSelectionModel = seriesTable.getSelectionModel();&#xa;seriesListSelectionModel.addListSelectionListener(new javax.swing.event.ListSelectionListener() {&#xa;            public void valueChanged(javax.swing.event.ListSelectionEvent evt) {&#xa;                seriesTableValueChanged(evt);&#xa;            }&#xa;        });&#xa;new TableSearcher(seriesTable, null).activateQuickSearch();"/>
                 <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="seriesTable.getColumnModel().getColumn(0).setHeaderValue(resourceBundle.getString(&quot;seriesTable.title&quot;));&#xa;seriesTable.getColumnModel().getColumn(1).setMaxWidth(50);&#xa;seriesTable.getColumnModel().getColumn(1).setMinWidth(25);"/>
               </AuxValues>
             </Component>
@@ -621,7 +621,7 @@
                 <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="albumsTableKeyPressed"/>
               </Events>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="ListSelectionModel albumsListSelectionModel = albumsTable.getSelectionModel();&#xa;albumsListSelectionModel.addListSelectionListener(new javax.swing.event.ListSelectionListener() {&#xa;            public void valueChanged(javax.swing.event.ListSelectionEvent evt) {&#xa;                albumsTableValueChanged(evt);&#xa;            }&#xa;        });"/>
+                <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="ListSelectionModel albumsListSelectionModel = albumsTable.getSelectionModel();&#xa;albumsListSelectionModel.addListSelectionListener(new javax.swing.event.ListSelectionListener() {&#xa;            public void valueChanged(javax.swing.event.ListSelectionEvent evt) {&#xa;                albumsTableValueChanged(evt);&#xa;            }&#xa;        });&#xa;new TableSearcher(albumsTable, null).activateQuickSearch();"/>
                 <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="albumsTable.getColumnModel().getColumn(1).setMinWidth(0);&#xa;albumsTable.getColumnModel().getColumn(1).setMaxWidth(0);"/>
               </AuxValues>
             </Component>
