HTML report is now finished. Close #6
Multi pages to limit the number of thumbnail on the report (for
hangout).
Continue to generate the report even when an error occurs during the
creation of the thumbnail.

--- a/src/booknaviger/resources/graphics/htmlreport/style.css
+++ b/src/booknaviger/resources/graphics/htmlreport/style.css
@@ -42,6 +42,22 @@ a:hover{
 	text-align:left;
 }
 
+table#navigation{
+        margin-top:10px;
+        margin-bottom:10px;
+}
+
+table#navigation td{
+        background-image:url(images/table_tray.png);
+	-moz-border-radius-topright:20px;
+	-webkit-border-radius-topright:20px;
+	-o-border-radius-topright:20px;
+	-moz-border-radius-topleft:20px;
+	-webkit-border-radius-topleft:20px;
+	-o-border-radius-topleft:20px;
+	width:100%;
+}
+
 thead td{
 	background-image:url(images/table_tray.png);
 	-moz-border-radius-topright:20px;
