--- a/src/booknaviger/inet/htmlreport/GenerationProgress.form
+++ b/src/booknaviger/inet/htmlreport/GenerationProgress.form
@@ -54,6 +54,7 @@
               <Component id="actionProgressBar" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="cancelButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
