--- a/src/booknaviger/inet/htmlreport/GenerationProgress.form
+++ b/src/booknaviger/inet/htmlreport/GenerationProgress.form
@@ -78,6 +78,9 @@
     <Component class="javax.swing.JLabel" name="actionLabel">
     </Component>
     <Component class="javax.swing.JProgressBar" name="actionProgressBar">
+      <Properties>
+        <Property name="stringPainted" type="boolean" value="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="cancelButton">
       <Properties>
