--- a/src/booknaviger/exceptioninterface/LogInterface.form
+++ b/src/booknaviger/exceptioninterface/LogInterface.form
@@ -2,7 +2,8 @@
 
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
-    <Property name="title" type="java.lang.String" value="Error log"/>
+    <Property name="title" type="java.lang.String" value="Log"/>
+    <Property name="alwaysOnTop" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
