#26 #25 #8 in progress. Not finished (far from it)

--- a/src/booknaviger/exceptioninterface/LogInterface.form
+++ b/src/booknaviger/exceptioninterface/LogInterface.form
@@ -45,6 +45,9 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTextPane" name="logTextPane">
+          <Events>
+            <EventHandler event="componentResized" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="logTextPaneComponentResized"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
