--- a/src/booknaviger/exceptioninterface/InfoInterface.form
+++ b/src/booknaviger/exceptioninterface/InfoInterface.form
@@ -72,9 +72,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="okButton">
       <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="booknaviger/resources/ReportModeSelector.properties" key="okButton" replaceFormat="resourceBundle.getString(&quot;{key}&quot;)"/>
-        </Property>
+        <Property name="text" type="java.lang.String" value="OK"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="okButtonActionPerformed"/>
